--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/zordius/dom-validate/issues"
   },
-  "homepage": "https://github.com/zordius/dom-validate#readme"
+  "homepage": "https://github.com/zordius/dom-validate#readme",
+  "dependencies": {
+    "cheerio": "^0.22.0",
+    "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.17.1"
+  }
 }
