--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dom-validate",
   "version": "0.0.1",
   "description": "A tool to check required/refused DOM nodes",
+  "bin": "cli.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +19,8 @@
   "homepage": "https://github.com/zordius/dom-validate#readme",
   "dependencies": {
     "cheerio": "^0.22.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "yargs": "^7.0.2"
   },
   "devDependencies": {
     "eslint": "^3.17.1"
