--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/zordius/dom-validate#readme",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "js-yaml": "^3.8.2",
     "request": "^2.81.0",
     "yargs": "^7.0.2"
   },
