--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "bin": "cli.js",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint cli.js index.js",
-    "test": "./cli.js -c sample.yaml -b https://tw.search.yahoo.com -v"
+    "lint": "eslint cli.js index.js test/*.js",
+    "functional": "./cli.js -c sample.yaml -b https://tw.search.yahoo.com -v",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "yargs": "^7.0.2"
   },
   "devDependencies": {
-    "eslint": "^3.17.1"
+    "chai": "^3.5.0",
+    "eslint": "^3.17.1",
+    "mocha": "^3.2.0"
   }
 }
