--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "eslint cli.js index.js test/*.js",
     "functional": "node cli.js -c sample.yaml -b https://tw.search.yahoo.com -v=2",
+    "xunit": "node cli.js -c sample.yaml -b https://tw.search.yahoo.com -v=2 -t | node_modules/.bin/tap-xunit",
     "test": "mocha"
   },
   "repository": {
@@ -28,6 +29,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^3.17.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "tap-xunit": "^1.7.0"
   }
 }
